--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "katex": "^0.16.25",
@@ -19,7 +20,9 @@
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
     "react-split": "^2.0.14",
+    "react-syntax-highlighter": "^16.1.0",
     "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0"
   },
   "devDependencies": {
